--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <div class="text-center">
             <button onclick="newElement()" id="addItem" class="btn btn-success">Add</button>
-            <button id="clear" class="btn btn-danger">Clear</button>
+            <button onclick="clearList()" id="clear" class="btn btn-danger">Clear</button>
             </div>
         <h3 class="text-center">Todo List</h3>
         <ul id="todoList"></ul>
